# python_training

./: download_pic.py  pyproject.toml  request.py
03-07-2023/: banking.py  logout.py
15-06-2023/: invalid_url.py
16-06-2023/: New.py  login.py
20-06-2023/: get_request.py  user_profile.py
26-06-2023/: Create_client.py  random_numbers.py
PTT-19-06-2023/: Changepassword.py  forgot_password.py
ptt/: Changepassword.py  Create_client.py  anomalies.py  banking.py  banking_api.py  booking.py  booking_api.py  claim.py  client.py  dashboard.py  file_upload.py  forgot_password.py  get_request.py  issueLog.py  login.py  logout.py  lookup.py  refresh_token.py  reports.py  respond_to_auth_challenge.py  update_userlist.py  user_profile.py  userlist.py
sample_test/: Login.py  Login_fail.py  client.py  client_file.py  create_client.py  ptt.py  pytest_test_api_endpoint.py  request.py  test_api_endpoint.py
tests/: __init__.py
