[tool.poetry]
name = "api-testing"
version = "0.1.0"
description = ""
authors = ["Soji Raju <soji.raju@edstem.com>"]
readme = "README.md"
packages = [{include = "api_testing"}]

[tool.poetry.dependencies]
python = "^3.11"
pytest = "^7.3.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
